--- a/sddm/theme.conf
+++ b/sddm/theme.conf
@@ -1,8 +1,8 @@
 [General]
 type=image
-color=#C3C7D1
+color=#fefefe
 highlight_color=#ffffff
-selected_color=#c50ed2
+selected_color=#00b0ff
 fontSize=11
-Background="assets/bg3.jpg"
-font="Cantarell"
+Background="assets/bg.jpg"
+font="SF Pro Text"
