--- a/plasma/look-and-feel/Andromeda/metadata.desktop
+++ b/plasma/look-and-feel/Andromeda/metadata.desktop
@@ -10,4 +10,4 @@ X-KDE-PluginInfo-Version=0.1
 X-KDE-PluginInfo-Website=https://github.com/EliverLara/Andromeda-kde
 X-KDE-ServiceTypes=Plasma/LookAndFeel
 
-X-KPackage-Dependencies=kns://colorschemes.knsrc/api.kde-look.org/2036822,kns://plasma-themes.knsrc/api.kde-look.org/2036834,kns://aurorae.knsrc/api.kde-look.org/2036828,kns://sddmtheme.knsrc/api.kde-look.org/2036829
+X-KPackage-Dependencies=kns://colorschemes.knsrc/api.kde-look.org/2036822,kns://plasma-themes.knsrc/api.kde-look.org/2036834,kns://aurorae.knsrc/api.kde-look.org/2036828,kns://sddmtheme.knsrc/api.kde-look.org/2036829,kns://plasmoids.knsrc/api.kde-look.org/2048016
